objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Cargo Air to Air</fullName>
        <description>For Cargo Air to Air</description>
        <isActive>true</isActive>
        <values>
            <fullName>Agreement</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Introductory Meeting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cargo Door to Door</fullName>
        <description>For Cargo Door to Door</description>
        <isActive>true</isActive>
        <values>
            <fullName>Agreement</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Final Meeting</fullName>
        </values>
        <values>
            <fullName>Finance Review</fullName>
        </values>
        <values>
            <fullName>Introductory Meeting</fullName>
        </values>
        <values>
            <fullName>Legal Review</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Check_In_Lat__c</fullName>
        <label>Check-In Lat</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_In_Lats__c</fullName>
        <label>Check-In Lats</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Check_In_Lon__c</fullName>
        <label>Check-In Lon</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>for Cargo; when is the contract with client ending; Based on this field a email notification will be triggered to GM/DGM of Cargo for renewal.</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>for Cargo;when the contract started with the client</description>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Login_Id__c</fullName>
        <label>Login Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Comments__c</fullName>
        <description>for Cargo;</description>
        <label>Lost Reason Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <description>for Cargo; to capture opty lost reason</description>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Lack of Interest</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Product not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>for Cargo; Origin of Cargo consignment</description>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ahmedabad</fullName>
                </value>
                <value>
                    <fullName>Aurangabad</fullName>
                </value>
                <value>
                    <fullName>Baddi</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Bhiwandi</fullName>
                </value>
                <value>
                    <fullName>Bhubaneswar</fullName>
                </value>
                <value>
                    <fullName>Chandigarh</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Cochin</fullName>
                </value>
                <value>
                    <fullName>Coimbatore</fullName>
                </value>
                <value>
                    <fullName>Dehradun</fullName>
                </value>
                <value>
                    <fullName>Goa</fullName>
                </value>
                <value>
                    <fullName>Gurgaon</fullName>
                </value>
                <value>
                    <fullName>Guwahati</fullName>
                </value>
                <value>
                    <fullName>Haridwar</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Indore</fullName>
                </value>
                <value>
                    <fullName>Jaipur</fullName>
                </value>
                <value>
                    <fullName>Jalandhar</fullName>
                </value>
                <value>
                    <fullName>Kirti Nagar (Delhi)</fullName>
                </value>
                <value>
                    <fullName>Kolkata</fullName>
                </value>
                <value>
                    <fullName>Lucknow</fullName>
                </value>
                <value>
                    <fullName>Ludhiana</fullName>
                </value>
                <value>
                    <fullName>Mahipalpur (Delhi)</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Nagpur</fullName>
                </value>
                <value>
                    <fullName>Navi Mumbai</fullName>
                </value>
                <value>
                    <fullName>Noida</fullName>
                </value>
                <value>
                    <fullName>Okhla (Delhi)</fullName>
                </value>
                <value>
                    <fullName>Parwanoo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_in_Kg__c</fullName>
        <description>for Cargo; to capture quantity in kg</description>
        <label>Quantity (in Kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>for Cargo; to capture region</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Air_to_Air</fullName>
        <active>true</active>
        <businessProcess>Cargo Air to Air</businessProcess>
        <description>for Air to Air Business Process</description>
        <label>Air to Air</label>
    </recordTypes>
    <recordTypes>
        <fullName>Door_to_Door</fullName>
        <active>true</active>
        <businessProcess>Cargo Door to Door</businessProcess>
        <description>for Door to Door Business Process</description>
        <label>Door to Door</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>